--- a/test_assignment/calibration.yaml
+++ b/test_assignment/calibration.yaml
@@ -1,1 +1,2 @@
-calibration: [0.000, -0.545, -2.217, -3.142, -1.309, -1.571]
+# calibration: [0.000, -0.545, -2.217, -3.142, -1.309, -1.571]
+calibration: [0.000, 0, 0, -1.571, 0, 0]
