--- a/test_assignment/package.xml
+++ b/test_assignment/package.xml
@@ -54,12 +54,14 @@
   <build_depend>pcl_ros</build_depend>
   <build_depend>cv_bridge</build_depend>
   <build_depend>image_transport</build_depend>
+  <build_depend>image_geometry</build_depend>
+  <build_depend>backward_ros</build_depend>
   
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
-
+  <exec_depend>backward_ros</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
