--- a/test_assignment/package.xml
+++ b/test_assignment/package.xml
@@ -56,6 +56,7 @@
   <build_depend>image_transport</build_depend>
   <build_depend>image_geometry</build_depend>
   <build_depend>backward_ros</build_depend>
+  <build_depend>visualization_msgs</build_depend>
   
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
